6. Список адресов