@@ -11,13 +11,7 @@ public class Profiles {
     public static List<Address> collect(List<Profile> profiles) {
         return profiles.stream()
                 .map((Profile profile) -> profile.getAddress())
-                .map((Address address) -> new Address(
-                        address.getCity(),
-                        address.getStreet(),
-                        address.getHome(),
-                        address.getApartment()
-                ))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static List<Address> collectSortWithoutDuplicate(List<Profile> profiles) {
